# DevEdge-IoTDevKit-ZephyrSDK

./: .gitignore  CMakeLists.txt  CODEOWNERS  Kconfig  README.md  Trademark_Disclaimer.md  set-zephyr-build-env  set-zephyr-build-env.bat  set-zephyr-build-env.ps1
.github/workflows/: build-tmo-shell-tmo-dev-edge.yml  build-tmoshell-devkit.yml  build.yml  mirror.yml  nightly-build.yml  tmo-nightly-build-tmoshell-devkit.yml
boards/arm/tmo_dev_edge/: Kconfig.defconfig  board.c  board.h  tmo_dev_edge.dts  tmo_dev_edge.yaml  tmo_dev_edge_defconfig
boards/arm/tmo_dev_edge/doc/: index.rst
boards/arm/tmo_dev_edge/dts/arm/silabs/: tmo_dev_edge-pinctrl.dtsi
dfu_gecko/: CMakeLists.txt  Kconfig.dfu_gecko  dfu_gecko_lib.c  dfu_gecko_lib.h
libs/: CMakeLists.txt  dfu_common.h
libs/dfu_gecko/: dfu_gecko_lib.c  dfu_gecko_lib.h
libs/dfu_murata_1sc/: CMakeLists.txt  dfu_murata_1sc.c  dfu_murata_1sc.h
libs/dfu_rs9116w/: CMakeLists.txt  dfu_rs9116w.c
maps/DaR/: efm32pg_stk3402a-OSX-map.yml  map.DevEdge.307.yml  map.sdk.variant.yml  map.yml  map1.yml  map3.yml  map_DevEdge1.yml  map_DevEdge2.yml  tmo_dev_edge-OSX-map.yml
quarantine/: efm32pg_stk3402a-quarantine.yaml  quarantine_empty.yaml  quarantine_hello_native.yaml  tmo_dev_edge-quarantine.yaml
samples/accel_demo/: CMakeLists.txt  prj.conf
samples/accel_demo/src/: main.c
samples/as6212_sample/: CMakeLists.txt  Kconfig  README.rst  prj.conf
samples/as6212_sample/src/: main.c
samples/bluetooth/bandwidth_test/: CMakeLists.txt  bw_test.py  prj.conf  requirements.txt
samples/bluetooth/bandwidth_test/src/: main.c
samples/bluetooth/bt_test/: CMakeLists.txt  prj.conf
samples/bluetooth/bt_test/src/: main.c
samples/bluetooth/peripheral_hr/: CMakeLists.txt  prj.conf
samples/bluetooth/peripheral_hr/src/: bas.c  hrs.c  main.c
samples/bluetooth/peripheral_sc_only/: CMakeLists.txt  prj.conf
samples/bluetooth/peripheral_sc_only/src/: main.c
samples/bluetooth/sc_extensive_test/: CMakeLists.txt  prj.conf
samples/bluetooth/sc_extensive_test/src/: main.c
samples/button_press_cb/: CMakeLists.txt  Kconfig  README.txt  prj.conf
samples/button_press_cb/src/: button.c  button.h  main.c
samples/dfu_gecko/: CMakeLists.txt  prj.conf
samples/dfu_gecko/lib/: CMakeLists.txt  dfu_gecko_lib.c  dfu_gecko_lib.h
samples/dfu_gecko/src/: main.c
samples/illuminance/: CMakeLists.txt  Kconfig  README.rst  prj.conf
samples/illuminance/boards/: tmo_dev_edge.conf  tmo_dev_edge.overlay
samples/illuminance/src/: main.c
samples/letimer/: CMakeLists.txt  README.rst  prj.conf
samples/letimer/src/: main.c
samples/lis2dw12_sample/: CMakeLists.txt  README.rst  prj.conf
samples/lis2dw12_sample/src/: main.c
samples/lis2dw12_sample_motion_nomotion/: Kconfig  prj.conf  sample.yaml
samples/lis2dw12_sample_motion_nomotion/src/: main.c
samples/mqtt_publisher_aws/: Kconfig  overlay-aws-1sc.conf  overlay-aws-9116.conf
samples/mqtt_publisher_aws/src/: certificates.h  main.c
samples/push_button_int_demo/: CMakeLists.txt  Kconfig  README.txt  overlay-bl.conf  overlay-mbed.conf  prj.conf
samples/push_button_int_demo/boards/: tmo_dev_edge.conf
samples/push_button_int_demo/src/: main.c
samples/push_button_sample/: CMakeLists.txt  Kconfig  README.txt  prj.conf
samples/push_button_sample/src/: main.c
samples/temperature_int_demo/: CMakeLists.txt  overlay-slot.conf
samples/temperature_int_demo/src/: temperature_int_demo.c
samples/tmo_shell/: CMakeLists.txt  Kconfig  get_zephyr_init_commit_tag.sh  get_zephyr_last_rebase_tag.sh  overlay-bl.conf  overlay-slot.conf  prj.conf
samples/tmo_shell/boards/: tmo_dev_edge.conf  tmo_dev_edge.overlay  tmo_dev_edge_mcuboot.overlay
samples/tmo_shell/src/: battery_ctrl.c  battery_ctrl.h  bq24250.c  buzzer_test.c  ca_certificate.h  devcert.der  devkey.der  dfu_gecko.c  dfu_gecko.h  dfu_murata_1sc.c  dfu_murata_1sc.h  dfu_rs9116w.c  dfu_rs9116w.h  echo-apps-cert.der  led_test.c  misc_test.c  servercert.der  tmo_adc.c  tmo_adc.h  tmo_batt_charger.c  tmo_batt_charger.h  tmo_battery_ctrl.c  tmo_battery_ctrl.h  tmo_ble_demo.c  tmo_ble_demo.h  tmo_bq24250.c  tmo_bq24250.h  tmo_buzzer.c  tmo_buzzer.h  tmo_certs.c  tmo_certs.h  tmo_dfu_download.c  tmo_dfu_download.h  tmo_file.c  tmo_file.h  tmo_fuel_gauge.c  tmo_gnss.c  tmo_gnss.h  tmo_http_mock_socket.c  tmo_http_request.c  (+27 more)
samples/tmo_shell/src/ek18/: CMakeLists.txt  COPYING
samples/tmo_shell/src/ek18/src/: cdefs.h  debug.h  kermit.c  kermit.h  kermit_cmd.c  kermit_cmd.h  zephyrio.c
samples/wake_sleep/: CMakeLists.txt  Kconfig  README.md  boards  prj.conf
samples/wake_sleep/boards/: tmo_dev_edge.conf  tmo_dev_edge_mcuboot.overlay  tmo_dev_edge_slot_0.overlay  tmo_dev_edge_slot_1.overlay
samples/wake_sleep/src/: main.c  strerror.c  strerror.h  strerror_table.h
scripts/: midi_tone_bin.py  requirements.txt
scripts/merger/: README-merge.txt  merge1.sh  merge2.sh  merge3.sh  merge4.sh
zephyr/: module.yml
